syntax = "proto2";

option cc_enable_arenas = true;

package c2018.score_subsystem;

enum ScoreGoal {
  SCORE_NONE = 0; // Let the state machine progress
  INTAKE_0 = 1;
  INTAKE_1 = 2;
  INTAKE_2 = 3;
  STOW = 4;
  SWITCH = 5;
  EXCHANGE = 6;
  PORTAL = 7;
  SCALE_LOW_FORWARD = 8;
  SCALE_LOW_REVERSE = 9;
  SCALE_MID_FORWARD = 10;
  SCALE_MID_REVERSE = 11;
  SCALE_HIGH_FORWARD = 12;
  SCALE_HIGH_REVERSE = 13;
  SCALE_SUPER_HIGH_FORWARD = 14;
  SCALE_SUPER_HIGH_REVERSE = 15;
}

enum IntakeGoal {
  INTAKE_NONE = 0; // Let the state machine progress
  INTAKE = 1;
  OUTTAKE = 2;
  FORCE_STOP = 3;
}

message ScoreSubsystemInput {
  required uint64 timestamp = 1;
  required double elevator_encoder = 2;
  required bool elevator_hall = 3;
  required double wrist_encoder = 4;
  required bool wrist_hall = 5;
  required double intake_current = 6;
  required bool has_cube = 7;
}

message ScoreSubsystemOutput {
  required uint64 timestamp = 1;
  required double elevator_voltage = 2;
  required double intake_voltage = 3;
  required double wrist_voltage = 4;
  required bool wrist_solenoid_open = 5;
  required bool wrist_solenoid_close = 6;
}

message ScoreSubsystemGoal {
  required uint64 timestamp = 1;
  required ScoreGoal score_goal = 2;
  required IntakeGoal intake_goal = 3;

  required double godmode_elevator = 4;
  required double godmode_roller = 5;
  required double godmode_wrist = 6;
  required bool godmode_claw_pinch = 7;
}

enum ScoreSubsystemState {
  CALIBRATING = 0;
  HOLDING = 1;
  INTAKING = 2;
  SCORING = 3;
}

message ScoreSubsystemStatus {
  required uint64 timestamp = 1;
  required double elevator_actual_height = 2;
  required double estimated_velocity = 3;
  required bool elevator_at_top = 4;
  required double elevator_voltage_error = 5;
  required double elevator_uncapped_voltage = 6;
  required double elevator_profiled_goal = 7;
  required double elevator_unprofiled_goal = 8;
  required bool elevator_encoder_fault_detected = 9;
  required ScoreSubsystemState state = 10;
  required bool elevator_calibrated = 11;
  required double wrist_angle = 12;
  required double wrist_velocity = 13;
  required bool wrist_calibrated = 14;
  required double wrist_profiled_goal = 15;
  required double wrist_unprofiled_goal = 16;
  required bool claw_pinch = 17;
  required bool has_cube = 18;
}
